@@ -42,7 +42,7 @@ Package: libgcc1
 X-DH-Build-For-Type: target
 Architecture: any
 Section: libs
-Priority: required
+Priority: optional
 Depends: gcc-8-base (= ${gcc:Version}), ${shlibs:Depends}, ${misc:Depends}
 Provides: libgcc1-armel [armel], libgcc1-armhf [armhf]
 Multi-Arch: same
@@ -68,7 +68,7 @@ Package: libgcc2
 X-DH-Build-For-Type: target
 Architecture: m68k
 Section: libs
-Priority: required
+Priority: optional
 Depends: gcc-8-base (= ${gcc:Version}), ${shlibs:Depends}, ${misc:Depends}
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
@@ -112,7 +112,7 @@ Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Breaks: ${multiarch:breaks}
 Section: libs
-Priority: required
+Priority: optional
 Depends: gcc-8-base (= ${gcc:Version}), ${shlibs:Depends}, ${misc:Depends}
 Description: GCC support library
  Shared version of the support library, a library of internal subroutines
@@ -1854,7 +1854,7 @@ Package: libstdc++6
 X-DH-Build-For-Type: target
 Architecture: any
 Section: libs
-Priority: important
+Priority: optional
 Depends: gcc-8-base (= ${gcc:Version}), ${dep:libc}, ${shlibs:Depends}, ${misc:Depends}
 Provides: libstdc++6-armel [armel], libstdc++6-armhf [armhf]
 Multi-Arch: same
