@@ -10,6 +10,7 @@ gcc-8 (8.2.0-13) UNRELEASED; urgency=medium
     See PR rtl-optimization/85412. Closes: #916591.
   * Fix PR sanitizer/88426, taken from the trunk. Closes: #916388.
   * Fix perl shebang for the gnathtml binary.
+  * Lower priority of libgcc[124] and libstdc++6 packages.
 
  -- Matthias Klose <doko@debian.org>  Sun, 16 Dec 2018 01:03:02 +0100
 
